tests/fixtures/valid/builtins/abs_builtin.py
# abs builtin
print(abs(-5))
print(abs(5))
print(abs(-3.14))
print(abs(3.14))
