tests/fixtures/invalid/round_ndigits_not_int.py
# round() ndigits must be an integer
print(round(3.14, 1.5))
